# chess_engine

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  README.md  build.ps1  build.sh  run.ps1  run.sh  todo.md
.agents/skills/testing-chess-engine/: SKILL.md
bot/: CMakeLists.txt  bot.h  bot_logic.c  bot_main.c
bots/bogo-bot/: CMakeLists.txt  bot_main.c  bot_uci.c  uci_client.c
src/: bitboard_utils.h  bot_player.c  bot_player.h  bot_registry.c  bot_registry.h  bot_select_screen.c  bot_select_screen.h  chess_engine.c  chess_engine.h  chess_utilities.h  game_config.c  game_config.h  game_screen.c  game_screen.h  main.c  rmem.h  screens.h  title_screen.c  uci.c  utilities.c  utilities.h
tests/: Makefile  generate_bitboard_string.c  run.sh  run_testc.sh  test.c
